# fp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  get.sh  notebook.json  post.sh  shell2cell.sh  template.jsonnet
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_issue.yml  config.yml
.github/workflows/: audit_rust.yml  build.yml  release.yml  release_install_script.yml  weekly_dependency_update.yml
docs/: developer_guide.md
extensions/: README.md
extensions/backlog-researcher/: README.md  package.json
extensions/backlog-researcher/.fp/: config.toml
extensions/backlog-researcher/.fp/extensions/: backlog-researcher.ts
extensions/backlog-researcher/src/: index.ts
extensions/claude-role-pool/: README.md
extensions/claude-role-pool/.fp/: config.toml
extensions/claude-role-pool/.fp/extensions/: claude-role-pool.ts
extensions/cursor-agent/: README.md  package.json
extensions/cursor-agent/.fp/: config.toml
extensions/cursor-agent/.fp/extensions/: cursor-agent.ts
extensions/cursor-agent/src/: index.ts
extensions/custom-properties/.fp/: config.toml
extensions/custom-properties/.fp/extensions/: custom-properties.ts
extensions/hello-hooks/: README.md
extensions/hello-hooks/.fp/: config.toml
extensions/hello-hooks/.fp/extensions/: hello-hooks.ts
extensions/issue-template-enforcer/: README.md
extensions/issue-template-enforcer/.fp/: config.toml
extensions/issue-template-enforcer/.fp/extensions/: issue-template-enforcer.ts
extensions/jj-workspace/: README.md
extensions/jj-workspace/.fp/: config.toml
extensions/jj-workspace/.fp/extensions/: jj-lifecycle.ts
extensions/post-create-automation/: README.md
extensions/post-create-automation/.fp/: config.toml
extensions/post-create-automation/.fp/extensions/: post-create-automation.ts
extensions/quality-gate/: README.md
extensions/quality-gate/.fp/: config.toml
extensions/quality-gate/.fp/extensions/: quality-gate.ts
extensions/status-transition-guard/: README.md
extensions/status-transition-guard/.fp/: config.toml
extensions/status-transition-guard/.fp/extensions/: status-transition-guard.ts
files/: cell.libsonnet  fiberplane.libsonnet  frontmatter.txt  notebook.libsonnet  sample.jsonnet  webhook.json
fixtures/: example-template-with-params.ts  example-template.ts
schemas/: openapi_v1.yml
scripts/: generate_api_client.sh  install.sh  manifest_sync.sh
src/: auth.rs  config.rs  create.rs  daemons.rs  data_sources.rs  events.rs  experiments.rs  fp_urls.rs  front_matter.rs  integrations.rs  interactive.rs  labels.rs  main.rs  manifest.rs  notebooks.rs  output.rs  plugins.rs  profiles.rs  providers.rs  proxies.rs  shell.rs  snippets.rs  templates.rs  tokens.rs  triggers.rs  update.rs  users.rs  utils.rs  version.rs  views.rs  webhook.rs  webhooks.rs  workspaces.rs  ws.rs
src/analytics/: command.rs  mod.rs  trackers.rs
src/append_cell/: cell_writer.rs
src/exec/: cell_writer.rs  mod.rs  parse_logs.rs  timestamp.rs
src/integrations/: pagerduty_receivers.rs
src/run/: cell_writer.rs  mod.rs  parse_logs.rs  timestamp.rs
src/runtime/: mod.rs  module_loader.rs
src/shell/: mod.rs  notebook_writer.rs  parser_iter.rs  pty_terminal.rs  shell_launcher.rs  shell_type.rs  terminal_extractor.rs  terminal_render.rs  terminal_renderer.rs  text_render.rs  text_renderer.rs
src/shell2/: mod.rs  pty_terminal.rs  shell_type.rs  terminal_render.rs  text_render.rs
src/stress_test/: mod.rs  worker.rs
src/utils/: ansi.rs  mod.rs  notebook_worker.rs
