[package]
name = "fp"
version = "2.0.0"
authors = ["Team Fiberplane"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abort-on-drop = "0.2.1"
anyhow = "1.0"
base64uuid = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint" }
base64 = "0.13.0"
blocking = "1.2.0"
bytes = "1.1.0"
clap = { version = "4.0.17", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.0.3"
cli-table = "0.4"
crossterm = { version = "0.23.0", features = ["event-stream"] }
directories = "4.0.1"
dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint", features = [
    "clap",
] }
fiberplane-markdown = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint" }
fp-api-client = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint" }
fp-provider-runtime = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint" }
fp-templates = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint" }
futures = "0.3"
futures-util = "0.3.21"
grok = "2.0.0"
hex = "0.4.3"
hyper = { version = "0.14.13", features = [
    "http1",
    "server",
    "tcp",
    "runtime",
] }
indicatif = "0.16.2"
lazy_static = "1.4.0"
memchr = "2.5.0"
once_cell = "1.8"
petname = { version = "1.1.1", default-features = false, features = [
    "std_rng",
    "default_dictionary",
] }
portable-pty = "0.7.0"
qstring = "0.7.2"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { version = "0.11.4", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rmp-serde = "1.0.0"
rmpv = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
sysinfo = "0.24.3"
termwiz = "0.16.0"
time = { version = "0.3.11", features = ["macros"] }
time_util = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "fp-2353-add-notebook-duplicate-endpoint" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["io", "compat"] }
toml = "0.5.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
uuid = { version = "1", features = ["serde", "v4"] }
vmap = "0.5.1"
webbrowser = "0.7.1"

[build-dependencies]
anyhow = "1.0"
vergen = "7"

# [patch."ssh://git@github.com/fiberplane/fiberplane-rs.git"]
# base64uuid = { path = "../fiberplane-rs/base64uuid" }
# fp-provider-runtime = { path = "../fiberplane-rs/fp-provider-protocol/fp-provider-runtime" }
# fiberplane = { path = "../fiberplane-rs/fiberplane" }
# fiberplane-markdown = { path = "../fiberplane-rs/fp-markdown" }
# fp-api-client = { path = "../fiberplane-rs/fp-api-client" }
# fp-templates = { path = "../fiberplane-rs/fp-templates" }
# time_util = { path = "../fiberplane-rs/time_util" }
