[package]
name = "fp"
version = "2.23.0"
authors = ["Team Fiberplane"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abort-on-drop = "0.2.1"
anyhow = "1.0"
base64 = "0.22.1"
blocking = "1.6.1"
bytes = "1.1.0"
clap = { version = "4.0.17", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.0.3"
clap-markdown = "0.1.3"
cli-table = "0.4"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
fiberplane = { version = "1.0.0-beta.14", features = [
    "api-client",
    "base64uuid-creation",
    "clap",
    "markdown",
    "models",
    "provider-runtime",
    "templates",
] }
futures = "0.3"
futures-util = "0.3.21"
grok = "2.0.0"
hex = "0.4.3"
http = "1.1"
http-body-util = "0.1.1"
human-panic = "1.1.3"
hyper = { version = "1.2.0", features = [
    "http1",
    "server",
] }
hyper-util = { version = "0.1.5", features = ["full"] }
indicatif = "0.17.0"
lazy_static = "1.4.0"
memchr = "2.5.0"
once_cell = "1.8"
petname = { version = "1.1.1", default-features = false, features = [
    "std_rng",
    "default_dictionary",
] }
portable-pty = "0.8.0"
qstring = "0.7.2"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
strum = "=0.24.1" # match what fiberplane-models uses
sysinfo = "0.30.12"
termwiz = "0.22.0"
time = { version = "0.3.11", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "compat"] }
toml = "0.8.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
uuid = { version = "1", features = ["serde", "v4"] }
vmap = "0.6.3"
webbrowser = "0.8.7"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.0.0", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }

[patch.crates-io]
fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane.git", branch = "main" }
#fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }
#fp-bindgen-macros = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }
